--- a/5월 1주차/5월 1일.MD
+++ b/5월 1주차/5월 1일.MD
@@ -72,6 +72,36 @@ DML
 */
 
 
+/*
+	그룹질의 : 두개이상의 select문을 이용한 질의
+		. 독립적으로 실행될 수 있는 완전한 select질의문이어야 한다.
+            	. 컬럼명 / 순서 / 데이터타입이 같아야 한다.
+            
+            	select 컬럼... from 테이블 [where 조건]
+            	union (all)
+           	 select 컬럼... from 테이블 [where 조건]
+            
+           	 union : 중복된 레코드는 제외시킨다.
+           	 union all : 중복 레코드라도 모두 표시한다.
+    
+    조인질의
+		두개이상의 테이블에서 테이블 간의 관련성을 이용하여 임시적으로 레코드를 통합한 후
+           	 데이터를 검색하는 질의기법이다.
+            
+          	  select 테이블A.컬럼, 테이블B.컬럼,,,
+			from 테이블A as a inner join 테이블B as b
+				on join조건
+				[where 조건]
+                
+                . 내부조인 : inner join , 조인조건에 일치하는 레코드만 결합
+                . 외부조인 : outer join , 조건에 맞지 않는 레코드도 결과에 생성
+				- left join : 왼쪽전체 + 오른쪽조건에 맞는것
+                                - right join : 오른쪽전체 + 왼쪽조건에 맞는것
+    
+    부속질의
+
+*/
+
 ```
 
 
@@ -113,3 +143,5 @@ GROUP BY 이수구분
 HAVING COUNT(*) >= 2
 ORDER BY 이수구분 ASC;
 ```
+
+
