--- a/5월 1주차/5월 1일.MD
+++ b/5월 1주차/5월 1일.MD
@@ -148,3 +148,13 @@ ORDER BY 이수구분 ASC;
 ```
 
 
+### 외부 join
+```mysql
+# 외부조인 학습
+#	-	기준테이블것은 모두 출력 (조건에 안맞으면 null처리) + 외부조인은 조건에 맞는것만 출력
+#	학생과 수강신청 테이블에서 모든 학생정보와 각 학생이 수강신청을 한 수강 신청 정보를 출력하시오.
+
+SELECT a.이름, a.취득점수, b.등급
+from 학사테이블 a inner join 등급기준표 b
+	on a.취득점수 between b.하한 and b.상한;
+```
