--- a/5월 1주차/5월 1일.MD
+++ b/5월 1주차/5월 1일.MD
@@ -83,8 +83,8 @@ DML
             
            		 union : 중복된 레코드는 제외시킨다.
             		union all : 중복 레코드라도 모두 표시한다.
-    
-    조인질의
+   	 
+   	조인질의
 			두개이상의 테이블에서 테이블 간의 관련성을 이용하여 임시적으로 레코드를 통합한 후
             			데이터를 검색하는 질의기법이다.
             
@@ -94,14 +94,20 @@ DML
 					[where 조건]
                 
                 . 내부조인 : inner join , 조인조건에 일치하는 레코드만 결합
-					- 동등조인 : 같은기준을 비교조건으로 해서.. = 
-                    - 비동등조인 : 서로 다른 값을 기준으로 결합.. inner join , cross join 키워드 사용
+			- 동등조인 : 같은기준을 비교조건으로 해서.. = 
+                   	 - 비동등조인 : 서로 다른 값을 기준으로 결합.. inner join , cross join 키워드 사용
                 
                 . 외부조인 : outer join , 조건에 맞지 않는 레코드도 결과에 생성
-								- left join : 왼쪽전체 + 오른쪽조건에 맞는것
+				- left join : 왼쪽전체 + 오른쪽조건에 맞는것
                                 - right join : 오른쪽전체 + 왼쪽조건에 맞는것
+				
+		. 셀프조인 : 한 테이블이 자기 자신과조인되는 것
+				>> 반드시 다른 별칭을 사용해줘야 한다.
     
-    부속질의
+  	부속질의
+		. 질의문 속 질의문
+		. ( )괄호 속에 있는 것부터 처리된다.
+    			
 
 */
 
