--- a/5월 1주차/5월 1일.MD
+++ b/5월 1주차/5월 1일.MD
@@ -107,6 +107,10 @@ DML
   	부속질의
 		. 질의문 속 질의문
 		. ( )괄호 속에 있는 것부터 처리된다.
+		. 부속질의는 SELECT문에서 WHERE절 또는 FROM절에 위치할 수 있다.
+		. 부속질의는 그룹함수나 GROUP BY절의 HAVING절과 함께 사용할수 있다.
+		
+		. 예)
     			
 
 */
