--- a/5월 1주차/5월 1일.MD
+++ b/5월 1주차/5월 1일.MD
@@ -110,7 +110,8 @@ DML
 		. 부속질의는 SELECT문에서 WHERE절 또는 FROM절에 위치할 수 있다.
 		. 부속질의는 그룹함수나 GROUP BY절의 HAVING절과 함께 사용할수 있다.
 		
-		. 예)
+		. 예) where 컬럼 조건연산 (select~~)
+		. 예) from (select~~~)
     			
 
 */
