--- a/5월 1주차/5월 1일.MD
+++ b/5월 1주차/5월 1일.MD
@@ -169,3 +169,16 @@ SELECT a.이름, a.취득점수, b.등급
 from 학사테이블 a inner join 등급기준표 b
 	on a.취득점수 between b.하한 and b.상한;
 ```
+
+
+### 부속질의
+```mysql
+# 강의 테이블에서 전공 강의를 담당하는 교수의 교수번호, 교수이름, 연구실위치, 전화번호를 출력하시오.
+
+SELECT 교수번호, 교수이름, 연구실위치, 전화번호
+FROM 교수
+WHERE 교수번호 in (
+	SELECT 강의_강의번호
+    FROM 강의
+    WHERE 이수구분 like '전공%');
+```
