--- a/5월 1주차/5월 1일.MD
+++ b/5월 1주차/5월 1일.MD
@@ -182,3 +182,14 @@ WHERE 교수번호 in (
     FROM 강의
     WHERE 이수구분 like '전공%');
 ```
+
+### 부속질의2
+```mysql
+# 학생테이블에서 전체학생 나이의 평균보다 나이가 많은 학생의 학생번호, 이름, 나이, 주소?
+SELECT 학생번호, 학생이름, 나이, 주소
+FROM 학생
+WHERE 나이 > (
+	SELECT avg(나이)
+	FROM 학생)
+ORDER BY 나이 ASC;
+```
