--- a/5월 1주차/5월 2일.MD
+++ b/5월 1주차/5월 2일.MD
@@ -1,24 +1,38 @@
 # Review
 
-DML
-- INSERT INTO 테이블(컬럼,,,) VALUES("값", "값,,,");
-- INSET INTO 테이블(a,b,c) SELECT a,b,c from 가져올 테이블 where 조건;
-- UPDATE 테이블 SET 컬럼 = 값, 컬럼 = 값,,, WHERE 조건;
-- DELETE FROM 테이블 WHERE 조건
-- SELECT distinct 컬럼, 컬럼 as 별칭,,, ~ FROM ~~
-- WHERE 조건
-- ORDER BY acs | desc limit 수;
+함수
+- 수학함수
+- 문자함수
+- 날짜함수
 
-연산식
-- 산술연산식
-- 비교연산식
-- 논리연산식
-- 문자연산식 : conat(문자열, 문자열), insert(), reverse(문자열), replace(문자열, 바꿀문자), trim(문자열),,,
-- 특수연산식 : between a and b , like "%문자", in('값','값','값'); , is null, is not null;
+SELECT JOIN
+```
+UNION
+  SELECT ~~~ FROM 테이블 [WHERE 조건]
+  UNION
+  SEELCT ~~~ FROM 테이블 [WHERE 조건]
+  select문은 각자 완벽한 하나의 독립적인 select문이어야 한다.
+  
+JOIN
+  SELECT a.컬럼, a.컬럼,,, b.컬럼, b.컬럼,,,
+    FROM 테이블 a inner join [cross join | left join | right join] 테이블 b
+    ON 임시테이블결합조건
+    WHERE 조건
+    
+    - inner조인 : 교집합 조인
+      - 동등 조인 : 조인조건이 같은 기준일때... 예) 교수.교수번호 = 강의.강의번호  = 활용
+      - 비동등 조인 : 조인조건이 다른 기준일때... 예) 성적.점수  between 하한점수 and 상한점수
+      
+    - outer조인 : 기준 테이블을 놓고 교집합
+    - 셀프조인 : 반드시 별칭을 사용한다.
+    
+부속질의
+  SELECT ~~~ FROM 테이블 WHERE 조건 (SELECT ~~~ FROM 테이블 WHERE 조건)
 
+```
 
 
 -----------------------------------------------------------------------------------------------
 
 # 오늘의 학습목표
-- SQL 함수
+- SQL 
