--- a/5월 1주차/5월 2일.MD
+++ b/5월 1주차/5월 2일.MD
@@ -35,4 +35,13 @@ JOIN
 -----------------------------------------------------------------------------------------------
 
 # 오늘의 학습목표
-- SQL 
+- ***SQL VIEW***를 이해하고 문법을 익혀 구현할 수 있다.
+- 포트폴리오에 ERD를 작성하고 VIEW를 추가 작성한다. 이와 연계한 웹페이지를 추가 보완 한다.
+
+# 공지사항
+- 데이터베이스 구현 / SQL활용 / SQL응용 평가예정
+- 평가일시 : 5/8(월)
+
+
+
+
