--- a/5월 1주차/5월 2일.MD
+++ b/5월 1주차/5월 2일.MD
@@ -42,6 +42,47 @@ JOIN
 - 데이터베이스 구현 / SQL활용 / SQL응용 평가예정
 - 평가일시 : 5/8(월)
 
+### 이론들
+```mysql
+/*
+	뷰(view)
+		- 필요한 정보만 추출하여 가상테이블 형태(view)로 제공한다.
+        - 복잡한 질의문을 간소화
+        - 작업결과를 임시로 보관
+        - 뷰를 기초로 다른 뷰를 생성할 수도 있다.
+        - 관리자로 부터 테이블에 대한 접근권한과 생성권한을 부여받아야 한다.
+        
+	목적
+		- 데이터 노출로부터 데이터베이스를 보호
+        - 데이터의 독립성
+        - 다양한 구조의 테이블 사용효과
+        - 작업의 단순화
+        
+	생성
+		CREATE VIEW 이름 as
+			select ~~~~~~
+            
+	수정 ALTER VIEW 이름(컬럼,컬럼...) AS
+    
+*/
+```
 
 
+### view 이용
+```mysql
+# 학과평균나이 뷰를 생성하시오.
+# 학생테이블 소속학과를 기준으로 학과의 평균나이를 출력해준다.
 
+CREATE VIEW 학과평균나이 AS
+SELECT truncate(AVG(나이), 0) AS 평균나이
+FROM 학생
+GROUP BY 소속학과;
+```
+
+### INSET INTO는 하기 힘드나, UPDATE SET은 쉽게 가능함
+```mysql
+# 컴퓨터과학과 C303교수의 주소를 경기도 의정부로 수정하시오.
+UPDATE 컴퓨터과학과교수
+set 주소 = '경기도 의정부'
+where 교수번호 = 'C303';
+```
