--- a/5월 1주차/5월 2일.MD
+++ b/5월 1주차/5월 2일.MD
@@ -86,3 +86,54 @@ UPDATE 컴퓨터과학과교수
 set 주소 = '경기도 의정부'
 where 교수번호 = 'C303';
 ```
+
+### mysql 여러가지
+```mysql
+# 사번 이름 부양가족수, 총급여(본봉+수당-공제액+상여금),평균소득(총급여/부양가족수)을 
+# 오름차순으로 출력되는
+# 부양가족별 평균소득 뷰를 작성하시오.
+
+
+CREATE VIEW 부양가족별_평균소득 AS
+SELECT 
+신상테이블.사번,
+신상테이블.성명,
+신상테이블.부양가족수,
+(본봉+수당-공제액+상여금) AS 총급여,
+truncate(((본봉+수당-공제액+상여금) / 신상테이블.부양가족수),0) AS 평균소득
+FROM 급여테이블
+INNER JOIN 신상테이블
+	ON 급여테이블.사번 = 신상테이블.사번
+ORDER BY 부양가족수 asc, 평균소득 asc;
+
+SELECT *
+FROM 부양가족별_평균소득;
+
+
+# 사원 김인수 씨의 생일까지 남은 일수를 산출하시오
+
+SELECT DATEDIFF(CONCAT(YEAR(NOW()),'-',MONTH(생년월일),'-',DAY(생년월일)), NOW()) AS '김인수 생일까지 남은 일수'
+FROM 신상테이블
+WHERE 성명 = '김인수';
+```
+
+### mysql 여러가지2
+```mysql
+# 직급이 사원에 해당하는 사원들의 사번, 이름, 직급, 수당, 부양가족수를 구할 수 있는 뷰를 생성하시오
+CREATE VIEW 사원뷰 AS
+SELECT 신상테이블.사번, 신상테이블.성명, 급여테이블.직급, 급여테이블.수당, 신상테이블.부양가족수
+FROM 신상테이블 INNER JOIN 급여테이블
+	ON 신상테이블.사번 = 급여테이블.사번
+WHERE 급여테이블.직급 REGEXP '^사원';
+
+SELECT *
+FROM 사원뷰;
+
+# 급여내역을 직급별 평균본봉, 평균수당, 평균공제액, 평근상여금, 직급별사원이름을 조회할 수 있는 급여내역 뷰를 작성하시오
+CREATE VIEW 급여내역뷰 AS
+SELECT 급여테이블.직급 AS 직급 ,truncate(AVG(본봉),0) AS 평균본봉, truncate(AVG(수당),0) AS 평균수당, 
+		truncate(AVG(공제액),0) AS 평균공제액, group_concat(성명) AS 이름
+FROM 급여테이블 INNER JOIN 신상테이블
+	ON 급여테이블.사번 = 신상테이블.사번
+GROUP BY 직급;
+```
