--- a/5월 1주차/5월 3일.MD
+++ b/5월 1주차/5월 3일.MD
@@ -27,3 +27,139 @@ DROP VIEW 뷰이름
 # 공지사항
 - 데이터베이스 구현 / SQL활용 / SQL응용 평가예정
 - 평가일시 : 5/8(월)
+
+
+### 이론
+```mysql
+/*
+	SQL문은 비 절차적 언어이다.
+    SQL은 필요한 정보에 대한 내용만 기술할 뿐 구체적인 처리방법은 기술하지 못한다.
+    SQL은 조건/반복문이 없다
+    이러한 부분을 보완하여 지원하는 방법으로 데이터베이스 안에 하나의 객체로 저장되어
+	관리되는 응용프로그램과 같은 기능이 제공되는데 이를 저장 프로그램이라고 한다.
+      
+	종류
+		    - 프로시저
+			      응용프로그램중 자주 사용되거나 복잡한 과정거치는 SQL문을 저장해서 하나의 개체로 관리하는
+           것이 저장 프로시저이다.
+        
+        - 함수
+			      일반 프로그래밍 언어에서 사용하는 함수와 같이 복잡한 프로그램이 가능하다.
+            
+        - 트리거
+			      특정 개체에 발생하는 이벤트에 따라 자동으로 동작하도록 설계되는 트리거
+        
+        - 커서
+			      테이블에서 여러개의 레코드를 질의하기 위해 사용된다.
+            
+	저장프로그램의 구조
+		  - 정의부분
+			    저장프로그램의 이름과 입출력되는 매개변수를 멍시하는 부분이다.
+            
+		  - 본문부분
+			    begin ~ end 사이에 구현하고 여러개의 명령문을 넣고 ;(세미콜론)으로 끝난다.
+            
+	변수
+		- 사용자정의
+			  @이름 = 값, @name = '홍길동'
+            - SQL문 안에서도 사용가능하고
+            - 저장프로그램 안과 밖 모두 사용가느하다.
+            - 데이터타입은 지정하지 않고 자동으로 결정된다.
+            
+		- 로컬변수
+			      . 저장 프로그램안에서 begin ~ end 사이에서 선언한다.
+            . (선언)   declare 변수명 데이터타입 [default 값]
+            . (값할당) set 변수 = 값 , select 값(상수) into 변수 from 테이블;
+            
+            
+	1. 프로시저
+		- 형식
+			  CREATE [DEFINER - 사용자 | 현재사용자]
+            PROCEDURE 프로시저명 (
+              IN|OUT|INOUT 매개변수 데이터타입[DEFAULT],,,)
+            BEGIN
+				      지역변수 선언 : declare 변수 타입 default 값;
+              SQL문
+                IF 조건식 THEN SQL문
+					        [ELSE 조건식 THEN SQL문]
+					        [ELSE SQL문]
+              END IF;
+              CASE 변수
+					        WHEN 비교변수 THEN SQL문
+                  [WHEN 비교변수 THEN SQL문]
+				      END CASE;
+              CASE 
+					        WHEN 조건식 DO SQL문
+              END CASE;
+              REPEAT 
+					        SQL문 UNTIL 조건식
+			      	END REPEAT
+              Loop이름 : LOOP ~~~
+					      SQL문
+              END LOOP;
+           END
+           
+            * IN : 프로시저 내부에서 값을 변경할 수 있어도 이 값을 반환할 수는 없다.
+            * OUT : 프로시저에서 사용된 값을 프로시저를 호출한 곳으로 전달할때 사용한다.
+            * INOUT : 프로시저 안으로 값을 저날하룻도 있고 호출한곳으로 값을 전달할 수도 있다.
+           
+	2. 호출 : call 프로시저(값,값,@사용자변수), call 프로시저(), call 프로시저
+  3. 삭제 : DROP PROCEDURE 프로시저
+  4. 수정 : 1) 지운다 2) 같은 이름으로 새로 생성한다.
+
+*/
+```
+
+### PROCEDURE 연습
+```mysql
+# 어떤 학생의 내역을 출력하는 test_in프로시저를 생성
+delimiter $$
+CREATE PROCEDURE test_in(in code char(9))
+begin
+	set @code = code;
+    select *
+    FROM 학생
+    WHERE 학생번호 = @code;
+end $$
+delimiter ;
+
+call test_in('201258047');
+
+SELECT *
+FROM 학생
+where 학생번호 = @code;
+```
+
+
+### PROCEDURE 연습2
+```mysql
+# 학생번호를 입력받아서 학생의 주소만 출력하는 학생주소검색 프로시저를 생성하시오.
+delimiter $$
+CREATE PROCEDURE 학생주소검색(in id char(9), out address varchar(50))
+	begin
+		SELECT 주소 
+        INTO address
+        FROM 학생 
+        WHERE 학생번호 = id;
+	end $$
+delimiter ;
+
+call 학생주소검색('201258047',@address);	-- in 값, out  받아올 사용자변수
+SELECT @address;
+```
+
+
+### inout 까지
+```mysql
+delimiter $$
+CREATE PROCEDURE 증감계산(inout count int, inc int)
+	BEGIN
+		SELECT count+inc into count;
+    END $$
+delimiter ;
+
+set @count = 1;
+call 증감계산(@count,3);
+select @count;
+```
+
