--- a/5월 1주차/5월 3일.MD
+++ b/5월 1주차/5월 3일.MD
@@ -106,8 +106,23 @@ DROP VIEW 뷰이름
 	2. 호출 : call 프로시저(값,값,@사용자변수), call 프로시저(), call 프로시저
   3. 삭제 : DROP PROCEDURE 프로시저
   4. 수정 : 1) 지운다 2) 같은 이름으로 새로 생성한다.
+  
+  
 
 */
+
+
+	/*
+	if 조건식
+    then SQL
+    elseif 조건식
+		then SQL
+	else
+		SQL
+	end if
+
+	*/
+
 ```
 
 ### PROCEDURE 연습
@@ -137,9 +152,9 @@ where 학생번호 = @code;
 delimiter $$
 CREATE PROCEDURE 학생주소검색(in id char(9), out address varchar(50))
 	begin
-		SELECT 주소 
+	SELECT 주소 
         INTO address
-        FROM 학생 
+       	FROM 학생 
         WHERE 학생번호 = id;
 	end $$
 delimiter ;
@@ -155,11 +170,18 @@ delimiter $$
 CREATE PROCEDURE 증감계산(inout count int, inc int)
 	BEGIN
 		SELECT count+inc into count;
-    END $$
+    	END $$
 delimiter ;
 
 set @count = 1;
 call 증감계산(@count,3);
 select @count;
 ```
+
+
+
+
+
+
+
 
