--- a/5월 1주차/5월 3일.MD
+++ b/5월 1주차/5월 3일.MD
@@ -179,7 +179,22 @@ select @count;
 ```
 
 
+### MAX나옴
+- WHERE절에 의해 2개이상 행을 반환할수도 있는경우 사용
+```mysql
+delimiter $$
+CREATE PROCEDURE 교수별강의내역(in pro char(4),out nam char(4)  ,out sub varchar(50), out isu varchar(20))
+	BEGIN
+		SELECT 교수.교수이름, MAX(강의.강의_강의번호), MAX(강의.이수구분) INTO nam, sub, isu
+        FROM 교수 JOIN 강의
+			ON 교수.교수번호 = 강의.강의_강의번호
+			WHERE 교수.교수번호 = pro;
+    END $$
+delimiter ;
 
+CALL 교수별강의내역('c012', @nam, @sub, @isu);
+SELECT @nam AS 교수이름, @sub AS 담당강의, @isu AS 이수구분;
+```
 
 
 
