--- a/5월 1주차/5월 3일.MD
+++ b/5월 1주차/5월 3일.MD
@@ -197,6 +197,32 @@ SELECT @nam AS 교수이름, @sub AS 담당강의, @isu AS 이수구분;
 ```
 
 
+### if문 이용
+```mysql
+# 강의번호를 입력받아서 강의 인원제한이 80 초과이면 '대강의실'
+# 40~80이면 '중강의실' 그외는 소강의실로 강의실규모를 출력해주는
+# '강의실배정' 프로시저를 작성하시오.
 
+delimiter $$
+CREATE PROCEDURE 강의실배정(in classNo char(4), out classLevel varchar(20))
+BEGIN
+    DECLARE classLimit int;
+    SELECT 인원제한 INTO classLimit 
+    FROM 강의
+    WHERE 강의번호 = classNo; -- 지역변수 초기화
+    
+    IF classLimit > 80 THEN
+        SET classLevel = '대강의실';
+    ELSEIF classLimit <= 80 AND classLimit >= 40 THEN
+        SET classLevel = '중강의실';
+    ELSE
+        SET classLevel = '소강의실';
+    END IF;
+END $$
+delimiter ;
+
+call 강의실배정('c041', @classLevel);
+SELECT @classLevel;
+```
 
 
