--- a/5월 1주차/5월 3일.MD
+++ b/5월 1주차/5월 3일.MD
@@ -122,6 +122,16 @@ DROP VIEW 뷰이름
 	end if
 
 	*/
+	
+	
+	/*
+	CASE 변수
+		when 비교변수1 then SQL
+        when 비교변수2 then SQL
+        else SQL
+	END CASE
+
+	*/
 
 ```
 
@@ -226,8 +236,31 @@ SELECT @classLevel;
 ```
 
 
+### when 이용
+```mysql
+# 학년(grade)을 입력받아서 MT(place)를 출력해주는 MY장소지정 프로시저를 작성하시오.
+# (1학년 제주도, 2학년 지리산, 3학년 설악산, 4학년 도서관)
+# case문으로 작성해보고 if문으로도 구현해보기
 
+delimiter $$
+CREATE PROCEDURE MY장소 (in grade int, out place varchar(100))
+BEGIN
+    CASE
+        WHEN grade = 1 THEN
+            SET place = '제주도';
+        WHEN grade = 2 THEN
+            SET place = '지리산';
+        WHEN grade = 3 THEN
+            SET place = '설악산';
+        ELSE
+            SET place = '도서관';
+    END CASE;
+END $$
+delimiter ;
 
+call My장소(1,@place);
+select @place as "MT 장소";
+```
 
 
 
