--- a/5월 1주차/5월 3일.MD
+++ b/5월 1주차/5월 3일.MD
@@ -263,6 +263,57 @@ select @place as "MT 장소";
 ```
 
 
+### if, case문 바꾸기
+```mysql
+# (실습) MT장소지정을 IT문으로 구현해보시오.
+delimiter $$
+CREATE PROCEDURE MT장소지정(in grade int, out place varchar(200))
+BEGIN
+
+    if grade = 1 THEN
+		SET place = '제주도';
+	ELSEIF grade = 2 THEN
+		set place = '지리산';
+	ELSEIF grade = 3 THEN
+		set place = '설악산';
+	ELSE
+		set place = '도서관';
+	END IF;
+    
+END $$
+delimiter ;
+
+call MT장소지정(2,@place);
+SELECT @place as '2학년엠티장소';
+
+# (실습) 강의실배정2 - 강의실배정을 case문을 활용해서 구현해 보시오.
+# 80보다 크면 대강의실, 40~80 중강의실, 나머진 소강의실
+# in 강의코드(ClassNo), out (classLevel)
+
+delimiter $$
+CREATE PROCEDURE 강의실배정ca(in classNo char(4), out classLevel varchar(20))
+	BEGIN
+    
+		DECLARE classLimit int;
+		SELECT 인원제한 into classLimit
+        FROM 강의
+        WHERE 강의번호 = classNo;
+        
+        CASE
+			WHEN classLimit > 80 then
+				set classLevel = '대강의실';
+            WHEN classLimit <= 80 and classLimit >=40  then
+				set classLevel = '중강의실';
+            ELSE
+				set classLevel = '소강의실';
+		END CASE;
+    
+    END$$
+delimiter ;
+
+call 강의실배정ca('c041',@classLevel);
+SELECT @classLevel as '강의실크기';
+```
 
 
 
