--- a/5월 1주차/5월 3일.MD
+++ b/5월 1주차/5월 3일.MD
@@ -139,6 +139,11 @@ DROP VIEW 뷰이름
   	  WHERE 조건식 do SQL ;
 
 	*/
+	
+	
+	/*
+	REPEAT ~~~ UNTIL 조건; (do-while 유사)
+	*/
 
 ```
 
@@ -323,4 +328,52 @@ SELECT @classLevel as '강의실크기';
 ```
 
 
+### while문, repeat untill문
+```mysql
+# 외부에서 num 입력받아서 0부터 num까지 누적합계 계산하고 결과값 sum을 반환하는
+# "누적합계1" 프로시저를 생성하시오
 
+delimiter $$
+CREATE PROCEDURE 누적합계1 (in num int, out sum int)
+	
+    BEGIN
+		declare i int;
+        set i = 1;
+        set sum = 0;
+        
+        while i<=num do
+			set sum = sum + i;
+            set i = i+1;
+        END while;
+        
+    END $$
+
+delimiter ;
+
+call 누적합계1(100,@sum);
+select @sum as '합';
+
+
+/*
+	REPEAT ~~~ UNTIL 조건; (do-while 유사)
+*/
+
+delimiter $$
+CREATE PROCEDURE 누적합계2(in num int, out sum int)	
+BEGIN
+
+	declare i int;
+	set i = 1;
+	set sum = 0;
+	repeat
+		set sum = sum + i;
+		set i = i + 1;
+	until i > num   -- 거짓일 동안 실행
+	end repeat;
+    
+END $$
+delimiter ;
+
+call 누적합계2(10,@sum);
+select @sum as '합';
+```
