--- a/5월 1주차/5월 3일.MD
+++ b/5월 1주차/5월 3일.MD
@@ -144,6 +144,13 @@ DROP VIEW 뷰이름
 	/*
 	REPEAT ~~~ UNTIL 조건; (do-while 유사)
 	*/
+	
+	/*
+	loop문
+		. 레이블을 이용해서 하나의 반복블록을 지정하고 leave문을 통해
+			loop문이 종료될때까지 반복한다.
+            (leave는 break, iterate는 continue와 유사하다)
+	*/
 
 ```
 
@@ -377,3 +384,32 @@ delimiter ;
 call 누적합계2(10,@sum);
 select @sum as '합';
 ```
+
+
+
+### loop문 이용
+```mysql
+delimiter $$
+CREATE PROCEDURE 누적합계3(in num int, out sum int)
+	BEGIN
+    
+		declare i int;
+        set i = 1;
+        set sum = 0;
+
+		loop_lable : loop
+			if i > num then
+				leave loop_lable;
+                
+			end if;
+            set sum = sum + i;
+            set i = i+1;
+		end loop;
+        
+	END $$
+delimiter ;
+
+call 누적합계3(1000,@sum);
+select @sum as '누적합계3 합';
+```
+
