--- a/5월 1주차/5월 3일.MD
+++ b/5월 1주차/5월 3일.MD
@@ -151,6 +151,28 @@ DROP VIEW 뷰이름
 			loop문이 종료될때까지 반복한다.
             (leave는 break, iterate는 continue와 유사하다)
 	*/
+	
+	
+	
+	
+	/*
+	
+	함수(function)
+		. 제공되는 함수로 수학함수, 문자함수, 날짜함수... 활용해 봤다
+        . 사용자가 직접 함수를 정의해서 사용하는 기능이다.
+        
+        . return문에 특정값을 반환하는 기능을 갖는다.
+        . return타입을 미리 지정해야 한다.
+        . call명령문으로 사용할 수 없다. SELECT문에 포함해서 실행된다.
+        . 모두 IN타입으로 처리된다.
+	. 함수안에서 저장프로시저, 재귀함수를 호출할 수 없다.
+        . begin~end 사이에 결과를 반환하는 SQL문을 사용할 수 없다.
+	
+	*/
+	show global variables like 'log_bin_trust_function_creators';
+	set global log_bin_trust_function_creators = 'on';
+	
+	
 
 ```
 
@@ -413,3 +435,35 @@ call 누적합계3(1000,@sum);
 select @sum as '누적합계3 합';
 ```
 
+### function
+```mysql
+# 강의실배정3
+delimiter $$
+create function 강의실배정3 (classNo char(4))
+
+	returns varchar(10)
+    
+    BEGIN
+		declare classLevel char(20);
+        declare classLimit int;
+        
+        select 인원제한 into classLimit
+        from 강의
+        where 강의번호 = classNo;
+        
+        if classLimit > 80 then
+			set classLevel = '대강의실';
+		elseif classLimit <= 80 and classLimit >= 40 then
+			set classLevel = '중강의실';
+		else set classLevel = '소강의실';
+        end if;
+        return classLevel;
+    END $$
+    
+delimiter ;
+
+select * from 강의;
+
+SELECT 강의번호, 강의이름, 인원제한, concat(강의실, ' ',강의실배정3(강의번호)) as 강의실배정
+FROM 강의;
+```
