--- a/5월 1주차/5월 3일.MD
+++ b/5월 1주차/5월 3일.MD
@@ -435,6 +435,13 @@ call 누적합계3(1000,@sum);
 select @sum as '누적합계3 합';
 ```
 
+# 함수
+- 아래 넣고 시작
+```
+show global variables like 'log_bin_trust_function_creators';
+set global log_bin_trust_function_creators = 'on';
+```
+
 ### function
 ```mysql
 # 강의실배정3
