--- a/5월 1주차/5월 3일.MD
+++ b/5월 1주차/5월 3일.MD
@@ -474,3 +474,55 @@ select * from 강의;
 SELECT 강의번호, 강의이름, 인원제한, concat(강의실, ' ',강의실배정3(강의번호)) as 강의실배정
 FROM 강의;
 ```
+
+# 알고리즘 문제와 같던...
+## 문제1
+```mysql
+# 요청받은 강의코드의 이수과목이 전공필수이면 10%상향, 전공선택이면 5%상향, 교양필수이면 1%상향
+# 하여 인원제한수를 재조정하는 '인원제한조정' 프로시저를 작성하시오 (단 소수점없이 반올림)
+
+DELIMITER $$
+CREATE PROCEDURE 인원제한조정(IN code VARCHAR(10))
+BEGIN
+    DECLARE required_credit VARCHAR(10);
+    DECLARE current_limit INT;
+    DECLARE new_limit INT;
+    
+    -- 요청받은 강의코드의 이수과목을 가져옵니다.
+    SELECT 이수과목 INTO required_credit
+    FROM 강의
+    WHERE 강의번호 = code;
+    
+    -- 현재 인원제한수를 가져옵니다.
+    SELECT 인원제한 INTO current_limit
+    FROM 강의
+    WHERE 강의번호 = code;
+    
+    -- 이수과목에 따라서 인원제한수를 조정합니다.
+    IF required_credit = '전공필수' THEN
+        SET new_limit = ROUND(current_limit * 1.1);
+    ELSEIF required_credit = '전공선택' THEN
+        SET new_limit = ROUND(current_limit * 1.05);
+    ELSEIF required_credit = '교양필수' THEN
+        SET new_limit = ROUND(current_limit * 1.01);
+    ELSE
+        -- 유효하지 않은 이수과목이면 인원제한수를 그대로 유지합니다.
+        SET new_limit = current_limit;
+    END IF;
+    
+    -- 새로운 인원제한수를 업데이트합니다.
+    UPDATE 강의
+    SET 인원제한 = new_limit
+    WHERE 강의번호 = code;
+END$$
+DELIMITER ;
+
+call 인원제한조정('c021');
+
+SELECT 인원제한
+FROM 강의
+WHERE 강의번호 = 'c021';
+
+SELECT *
+FROM 강의;
+```
