--- a/5월 1주차/5월 3일.MD
+++ b/5월 1주차/5월 3일.MD
@@ -526,3 +526,55 @@ WHERE 강의번호 = 'c021';
 SELECT *
 FROM 강의;
 ```
+
+
+
+# 아래 문제 다시 해보기
+```mysql
+# 2. 교수테이블에 상여금컬럼(null)을 추가해놓고
+# 입력받은 강의번호의 담당교수가 정교수이면은 상여금 100만원, 부교수이면은 상여금 50만원
+# 조교수이면은 상여금 1000만원을 등록하는 "상여금처리"프로시저를 작성하시오.
+
+DELIMITER $$
+CREATE PROCEDURE 상여금처리2(IN code CHAR(4))
+BEGIN
+    DECLARE procode CHAR(10);
+    DECLARE position CHAR(10);
+    DECLARE nullmoney char(10);
+    
+    SELECT 강의_강의번호 INTO procode
+    FROM 강의
+    WHERE 강의_강의번호 = code;
+    
+    SELECT 직위 INTO position
+    FROM 교수
+    WHERE 교수번호 = procode
+    ORDER BY 직위 asc
+    limit 1;
+    
+    IF position = '정교수' THEN
+        UPDATE 교수
+        SET 상여금 = '100만원'
+        WHERE 교수번호 = procode;
+    ELSEIF position = '부교수' THEN
+        UPDATE 교수
+        SET 상여금 = '50만원'
+        WHERE 교수번호 = procode;
+    ELSEIF position = '조교수' then
+        UPDATE 교수
+        SET 상여금 = '1000만원'
+        WHERE 교수번호 = procode;
+	ELSE update 교수
+		set 상여금 = null;
+    END IF;
+END$$
+DELIMITER ;
+
+call 상여금처리2('C012');
+
+SELECT *
+FROM 교수;
+
+SELECT *
+FROM 강의;
+```
