--- a/5월 1주차/5월 4일.MD
+++ b/5월 1주차/5월 4일.MD
@@ -43,7 +43,7 @@ CALL 프로시저명 (매개변수, 매개변수,,,@사용자매개변수)
 -----------------------------------------------------------------------------------------------
 
 # 오늘의 학습목표
-- 내장 Procedure(프로시저)를 이해하고 복잡하고 자주사용되는 SQL을 처리할 수 있는 프로시저를 구현할 수 있다.
+- 트리거/트렌잭션을 이해하고 구현할 수 있다.
 
 # 공지사항
 - 데이터베이스 구현 / SQL활용 / SQL응용 평가예정
