--- a/5월 1주차/5월 4일.MD
+++ b/5월 1주차/5월 4일.MD
@@ -91,6 +91,28 @@ CALL 프로시저명 (매개변수, 매개변수,,,@사용자매개변수)
 */
 ```
 
+### trigger 연습1
+```mysql
+# 학생테이블에서 학년컬럼에 학년을 수정하려고 하는데... 1~4 범위를 벗어난 입력값이 있을떄
+# 처리해야할 일을 트리거로 작성
+delimiter $$
+CREATE TRIGGER before_학년_update BEFORE UPDATE ON 학생
+FOR EACH ROW BEGIN
+    IF NEW.학년 < 1 THEN
+        SET NEW.학년 = 1;
+    ELSEIF NEW.학년 > 4 THEN
+        SET NEW.학년 = 4;
+    END IF;
+END $$
+delimiter ;
 
+select * 
+from 학생;
+
+
+update 
+학생 set 학년 = 0
+where 학생번호 = '201258047';
+```
 
 
