--- a/5월 1주차/5월 4일.MD
+++ b/5월 1주차/5월 4일.MD
@@ -91,6 +91,11 @@ CALL 프로시저명 (매개변수, 매개변수,,,@사용자매개변수)
 */
 ```
 
+## 조금이따 해보기
+```
+# 특정 강의를 삭제하면... 수강신청테이블에서 해당 수강신청항목을 삭제하는 트리거를 구현하시오.
+```
+
 ### trigger 연습1
 ```mysql
 # 학생테이블에서 학년컬럼에 학년을 수정하려고 하는데... 1~4 범위를 벗어난 입력값이 있을떄
