--- a/5월 1주차/5월 4일.MD
+++ b/5월 1주차/5월 4일.MD
@@ -133,4 +133,51 @@ update
 where 학생번호 = '201258047';
 ```
 
+trigger 연습2
+```mysql
+# 강의 테이블에서 update문이 실행된 후 수강할 수 있는 인원제한을 50~100으로
+# 제한한다. 만약 50명이하로 등록하면 최소인원 50명으로 100명으로 입력되면 최대 100명
+# 등록되도록 트리거를 등록하시오.
 
+
+delimiter $$
+CREATE TRIGGER 강의인원제한 before UPDATE ON 강의
+FOR EACH ROW
+BEGIN
+    IF NEW.인원제한 < 50 THEN
+        SET NEW.인원제한 = 50;
+    ELSEIF NEW.인원제한 >= 50 AND NEW.인원제한 <=100 THEN
+        SET NEW.인원제한 = 100;
+    END IF;
+END$$
+delimiter ;
+
+update 강의
+set 인원제한 = 40
+where 강의번호 = 'C019';
+```
+
+trigger 연습3
+```mysql
+## 학생테이블에 새로운 데이터가 입력되었을때... 입력받은 학생테이블의 데이터를 학생B라는 테이블에
+## 백업해두는 트리거를 생성하시오.
+delimiter $$
+CREATE TRIGGER 학생백업 AFTER INSERT ON 학생
+FOR EACH ROW BEGIN
+	INSERT INTO 학생B
+    VALUES
+    (new.학생번호, new.소속학과, new.학생이름, new.학년, new.성별, new.나이, new.전화번호, new.주소);
+END$$
+delimiter ;
+
+drop trigger 학생백업;
+
+drop table 학생b;
+
+insert INTO 학생
+VALUES
+('201531002', '조경학과', '라마바', 2, '남', 23, '010-1234-5678', '서울시 성동구');
+
+SELECT *
+from 학생b;
+```
