--- a/5월 1주차/5월 4일.MD
+++ b/5월 1주차/5월 4일.MD
@@ -100,14 +100,18 @@ CALL 프로시저명 (매개변수, 매개변수,,,@사용자매개변수)
 			. 장애발생 시 복구자겁의 단위가 된다.
            		. 연관된 여러 작업이 동시에 같은 데이터를 다룰때 작업의 단위를 분리하는 단위가 된다.
 			. 예)
-				홍길동이가 조회를 해서 5000원이 있는지 확인한다 --> 실
+				홍길동이가 조회를 해서 5000원이 있는지 확인한다 --> 실행
                 		5000원을 출금한다. ( - )		------> 오류!!!
                			동생에게 이체한다 ( + )		      ------> 실행
                 		잔액을 조회한다.			------> 실행
 				
-				
+				반영(commit)
 				
                 		>> 업무의 논리적인 작업단위를 정의한 것이다.
+				
+	. commit - 자동 커밋 : insert문, update문, delete문 자동으로 커밋되는 트랜잭션이다.
+		 - set autocommit = 0; (비활성화)
+       		 - set autocommit = 1; (활성화)
     
 */
 
