--- a/5월 1주차/5월 4일.MD
+++ b/5월 1주차/5월 4일.MD
@@ -52,6 +52,9 @@ CALL 프로시저명 (매개변수, 매개변수,,,@사용자매개변수)
 
 ### 이론
 ```mysql
+
+-- inset, update, delete 자동커밋이 이루어진다 그 외는 commit을 해줘야한다.
+
 /*
 	트리거(Trigger)
 			- 어떤 테이블의 데이터가 변경될 때 자동으로 지정된 애플리케이션이 동작되거나
@@ -109,11 +112,21 @@ CALL 프로시저명 (매개변수, 매개변수,,,@사용자매개변수)
 				
                 		>> 업무의 논리적인 작업단위를 정의한 것이다.
 				
-	. commit - 자동 커밋 : insert문, update문, delete문 자동으로 커밋되는 트랜잭션이다.
-		 - set autocommit = 0; (비활성화)
-       		 - set autocommit = 1; (활성화)
+	. commit - 1) 자동 커밋 : insert문, update문, delete문 자동으로 커밋되는 트랜잭션이다.
+			 - set autocommit = 0; (비활성화)
+       			 - set autocommit = 1; (활성화)
+			 
+		   2) 명시적으로 커밋 - 트랜잭션
+			 - 시작시점, 커밋, 롤백하는 시점을 직접 명시해야 한다.
     
 */
+
+	-- SIGNAL SQLSTATE '45000' 문
+	--  사용자가 오류를 강제로 발생시키는 함수
+	--  사용자가 정의한 오류 메시지를 출력
+	--  사용자가 시도한 INSERT는 롤백처리한다.
+
+
 
 ```
 
