--- a/5월 1주차/5월 4일.MD
+++ b/5월 1주차/5월 4일.MD
@@ -159,7 +159,7 @@ update
 where 학생번호 = '201258047';
 ```
 
-trigger 연습2
+### trigger 연습2
 ```mysql
 # 강의 테이블에서 update문이 실행된 후 수강할 수 있는 인원제한을 50~100으로
 # 제한한다. 만약 50명이하로 등록하면 최소인원 50명으로 100명으로 입력되면 최대 100명
@@ -183,7 +183,7 @@ set 인원제한 = 40
 where 강의번호 = 'C019';
 ```
 
-trigger 연습3
+### trigger 연습3
 ```mysql
 ## 학생테이블에 새로운 데이터가 입력되었을때... 입력받은 학생테이블의 데이터를 학생B라는 테이블에
 ## 백업해두는 트리거를 생성하시오.
@@ -207,3 +207,25 @@ VALUES
 SELECT *
 from 학생b;
 ```
+
+### transaction 연습1
+```mysql
+# transaction 구현
+
+start transaction;
+	savepoint p;
+	update 예금통장
+    set 잔액 = 잔액-5000
+    where 예금주아이디 = '001';
+    
+    update 예금통장
+    set 잔액 = 잔액+5000
+    where 예금주아이디 = '002';
+rollback to p;
+commit;
+
+select *
+FROM 예금통장;
+```
+
+
