--- a/5월 1주차/5월 4일.MD
+++ b/5월 1주차/5월 4일.MD
@@ -54,6 +54,8 @@ CALL 프로시저명 (매개변수, 매개변수,,,@사용자매개변수)
 ```mysql
 
 -- inset, update, delete 자동커밋이 이루어진다 그 외는 commit을 해줘야한다.
+-- declare exit handler for sqlexception rollback;
+-- exit handler : 특정이벤트 (sqlexception)발생시 특정작업(rollback)을 수행해라.
 
 /*
 	트리거(Trigger)
