--- a/5월 1주차/5월 4일.MD
+++ b/5월 1주차/5월 4일.MD
@@ -230,4 +230,45 @@ select *
 FROM 예금통장;
 ```
 
+### 예금통장 음수 안나오게
+```mysql
+# update 트리거생성
+delimiter $$
+create trigger before_예금통장_update before update
+	on 예금통장
+    for each row
+    begin
+		declare message_text varchar(45);
+		if new.잔액 < 0 then
+			signal sqlstate '45000'
+				set message_text = '잔액이 부족합니다';
+		end if;
+    end $$
+delimiter ;
 
+# 트랜젝션을 프로시저로 만들어서 송금처리 작업단위를 처리한다.
+
+delimiter $$
+CREATE procedure 송금 (in 이체금액 int)
+BEGIN
+	
+    declare exit handler for sqlexception rollback;
+		-- exit handler : 특정이벤트 (sqlexception)발생시 특정작업(rollback)을 수행해라.
+        
+	start transaction;
+		update testdb.예금통장
+        set 잔액 = 잔액-이체금액
+        where 예금주아이디 = "001";
+        
+        update testdb.예금통장
+        set 잔액 = 잔액+이체금액
+        where 예금주아이디 = "002";
+    commit;
+END $$
+delimiter ;
+
+select *
+from 예금통장;
+
+call 송금(2000);
+```
