--- a/5월 1주차/5월 3일.MD
+++ b/5월 1주차/5월 3일.MD
@@ -63,7 +63,7 @@ DROP VIEW 뷰이름
 		- 사용자정의
 			  @이름 = 값, @name = '홍길동'
             - SQL문 안에서도 사용가능하고
-            - 저장프로그램 안과 밖 모두 사용가느하다.
+            - 저장프로그램 안과 밖 모두 사용가하다.
             - 데이터타입은 지정하지 않고 자동으로 결정된다.
             
 		- 로컬변수
