--- a/5월 1주차/5월 4일.MD
+++ b/5월 1주차/5월 4일.MD
@@ -67,7 +67,7 @@ CALL 프로시저명 (매개변수, 매개변수,,,@사용자매개변수)
         
 		활용
 			- 데이터베이스의 무결성을 위해 테이블 정의시 제약조건을 명시하는 방법을 사용한다.
-            		- 복잡한 데이터의 적합성 검사에 호라용
+            		- 복잡한 데이터의 적합성 검사에 활용
           	        - >> 광범위한 참조 무결성 검사에 활용된다.
             
 		단점
