--- a/5월 1주차/5월 4일.MD
+++ b/5월 1주차/5월 4일.MD
@@ -102,7 +102,7 @@ CALL 프로시저명 (매개변수, 매개변수,,,@사용자매개변수)
 		- DBMS에서 다루는 논리적인 작업의 단위
         	- 서로 연관된 하나 이상의 명령들로 이루어진 논리적인 작업단위
         	- 필요 이유
-			. 장애발생 시 복구자겁의 단위가 된다.
+			. 장애발생 시 복업작업의 단위가 된다.
            		. 연관된 여러 작업이 동시에 같은 데이터를 다룰때 작업의 단위를 분리하는 단위가 된다.
 			. 예)
 				홍길동이가 조회를 해서 5000원이 있는지 확인한다 --> 실행
