--- a/5월 2주차/5월 8일.MD
+++ b/5월 2주차/5월 8일.MD
@@ -1,44 +1,24 @@
 # Review
 
-저장 프로그램
-```
-SQL은 비절차적 언어로 다른 응용프로그램처럼 조건문, 반복문을 사용할 수 없다.
-절차적으로 처리하기 위한 기능을 저장프로그램으로 제공한다.
-DMBS 내부에 컴파일되어 캐시에 저장되어 실행되는 프로그램이다.
-제어명령과 변수도 지원한다.
-```
+데이터베이스 학습
+1. 개체(Entity)와 속성(Relationship)
 
-종류
-- 프로시저
-- 함수 : 복잡한 프로그램이 가능(프로시저와 유사)
-- 트리거 : 특정 개체에 발생하는 이벤트에 따라 자동으로 동작하다록 설계
+2. 관계와 사상수
+- 식별관계 : 부모테이블의 기본키가 자식 테이블의 기본키로 전이되는 관계
+- 비식별관계 : 부모 테이블의 기본키가 자식 테이블의 일반키로 전이되는 관계
+- 1:1, 1:N, M:N
 
-형식
-- 정의부분 : procedure 프로시저명(매개변수) 프로시저명은 유일해야한다.
-- 본문부분 begin ~ [begin ~ end] end
+3. 데이터베이스의 구조
+- 컬럼 : 열, 필드, 속성
+- 레코드 : 행, 튜플
+- 도메일 : 컬럼이 가질수 있는 값의 범위
+- 차수 : 릴레이션에 존재하는 속성의 개수
+- 카디널리티 : 릴레이션에 존재하는 레코드의 개수
 
-## 변수
-- 사용자변수 : @~로 시작 : @name = "홍길동" --- 어디서든 불러 사용가능
-- 로컬변수 : begin ~ end안에서 declare 변수, 변수,, 데이터타입 [default 값]
-- 초기값 설정 : set 변수 = 값 또는 select 상수 into 변수 from 테이블
+4. 릴레이션(테이블)의 특징
+- 레코드의 유일성, 레콛의 무순서성,
+- 컬럼의 무순서성 및 이름과 값의 쌍으로 구성, 컬럼의 원지력?
 
-### 저장프로시저
-CREATE PROCEDURE 프로시정 ( IN | OUT | INOUT 매개변수 데이터타입 [DEFAULT],, )
-```
-BEGIN
-  지역변수선언 / 초기화
-  SQL 문장...................;
-  IF 조건식 then SQL문 [ELSE 조건식 THEN SQL문] [ELSE SQL문] END IF;
-  CASE 받은변수 WHEN 비교변수 THEN SQL문 [WHEN 비교변수 THEN SQL문] [ELSE~] END CASE;
-  CASE WHEN 조건식 THEN SQL문 ,,, [ELSE SQL문]
-  WHILE 조건식 DO SQL문 END WHILE;
-  REPEAT SQL문 UNTIL 조건식 END REPEAT;
-  Loop이름 : LOOP ~~~ END LOOP;
-  [다른 프로시저 호출가능]
-END
-```
-
-CALL 프로시저명 (매개변수, 매개변수,,,@사용자매개변수)
 
 -----------------------------------------------------------------------------------------------
 
