--- a/5월 2주차/5월 8일.MD
+++ b/5월 2주차/5월 8일.MD
@@ -4,8 +4,8 @@
 1. 개체(Entity)와 속성(Relationship)
 
 2. 관계와 사상수
-- 식별관계 : 부모테이블의 기본키가 자식 테이블의 기본키로 전이되는 관계
-- 비식별관계 : 부모 테이블의 기본키가 자식 테이블의 일반키로 전이되는 관계
+- 식별관계 : 부모테이블의 기본키가 자식 테이블의 ***기본키로 전이되는 관계***
+- 비식별관계 : 부모 테이블의 기본키가 자식 테이블의 ***일반키로 전이되는 관계***
 - 1:1, 1:N, M:N
 
 3. 데이터베이스의 구조
@@ -17,7 +17,30 @@
 
 4. 릴레이션(테이블)의 특징
 - 레코드의 유일성, 레콛의 무순서성,
-- 컬럼의 무순서성 및 이름과 값의 쌍으로 구성, 컬럼의 원지력?
+- 컬럼의 무순서성 및 이름과 값의 쌍으로 구성, 컬럼의 원자성(분해불가)
+
+5. 워크벤치에서 ERD다이어그램 구현
+- 약한개체는 강한개체의 집합의 키 속성을 포함시킨다.
+- 1:1관계에서 둘중 어느 한쪽의 기본키를 참조하는 외래키를 다른 릴레이션에 퐘시킨다.
+- 1:N관계에서 1쪽의 기본키를 N쪽에 외래키로 포함시킨다.
+- N:M관계에서 두 릴레이션의 기본키를 각각 참조하는 외래키를 복합키 형태로 새로운 릴레이션을 생성한다.
+- 다중값 속성은 릴레이션의 기본키와 다중값 속성을 별도의 릴레이션으로 구성한다.
+
+6. DDL(Data Definition Language) - 정의어
+- CREATE, ALTER, DROP
+
+7. DML(Data Manipulation Language) - 조작어
+- INSERT INTO ~~ VALUES(값, 값,,,)
+- UPATE 테이블 SET 컬럼 = 값 WHERE 조건
+
+```
+SELECT distint, as, 함수() ~~ FROM 테이블1 as a INNER[OUTER] JOIN 테이블2 as b
+  ON 조인조건
+  GROUP BY 컬럼조인 HAVING 컬럼조인 조건
+  WHERE 레코드 조건
+  ORDER BY 정렬
+```
+- SELECT ~~~~~ FROM 테이블 WHERE 컬럼 = 
 
 
 -----------------------------------------------------------------------------------------------
