--- a/5월 2주차/5월 8일.MD
+++ b/5월 2주차/5월 8일.MD
@@ -31,7 +31,7 @@
 
 7. DML(Data Manipulation Language) - 조작어
 - INSERT INTO ~~ VALUES(값, 값,,,)
-- UPATE 테이블 SET 컬럼 = 값 WHERE 조건
+- UPDATE 테이블 SET 컬럼 = 값 WHERE 조건
 
 ```
 SELECT distint, as, 함수() ~~ FROM 테이블1 as a INNER[OUTER] JOIN 테이블2 as b
