--- a/5월 2주차/5월 8일.MD
+++ b/5월 2주차/5월 8일.MD
@@ -1,35 +1,35 @@
 # Review
 
 데이터베이스 학습
-1. 개체(Entity)와 속성(Relationship)
+## 개체(Entity)와 속성(Relationship)
 
-2. 관계와 사상수
+### 관계와 사상수
 - 식별관계 : 부모테이블의 기본키가 자식 테이블의 ***기본키로 전이되는 관계***
 - 비식별관계 : 부모 테이블의 기본키가 자식 테이블의 ***일반키로 전이되는 관계***
 - 1:1, 1:N, M:N
 
-3. 데이터베이스의 구조
+### 데이터베이스의 구조
 - 컬럼 : 열, 필드, 속성
 - 레코드 : 행, 튜플
 - 도메일 : 컬럼이 가질수 있는 값의 범위
 - 차수 : 릴레이션에 존재하는 속성의 개수
 - 카디널리티 : 릴레이션에 존재하는 레코드의 개수
 
-4. 릴레이션(테이블)의 특징
+### 릴레이션(테이블)의 특징
 - 레코드의 유일성, 레콛의 무순서성,
 - 컬럼의 무순서성 및 이름과 값의 쌍으로 구성, 컬럼의 원자성(분해불가)
 
-5. 워크벤치에서 ERD다이어그램 구현
+### 워크벤치에서 ERD다이어그램 구현
 - 약한개체는 강한개체의 집합의 키 속성을 포함시킨다.
 - 1:1관계에서 둘중 어느 한쪽의 기본키를 참조하는 외래키를 다른 릴레이션에 퐘시킨다.
 - 1:N관계에서 1쪽의 기본키를 N쪽에 외래키로 포함시킨다.
 - N:M관계에서 두 릴레이션의 기본키를 각각 참조하는 외래키를 복합키 형태로 새로운 릴레이션을 생성한다.
 - 다중값 속성은 릴레이션의 기본키와 다중값 속성을 별도의 릴레이션으로 구성한다.
 
-6. DDL(Data Definition Language) - 정의어
+### DDL(Data Definition Language) - 정의어
 - CREATE, ALTER, DROP
 
-7. DML(Data Manipulation Language) - 조작어
+### DML(Data Manipulation Language) - 조작어
 - INSERT INTO ~~ VALUES(값, 값,,,)
 - UPDATE 테이블 SET 컬럼 = 값 WHERE 조건
 
@@ -40,8 +40,38 @@ SELECT distint, as, 함수() ~~ FROM 테이블1 as a INNER[OUTER] JOIN 테이블
   WHERE 레코드 조건
   ORDER BY 정렬
 ```
-- SELECT ~~~~~ FROM 테이블 WHERE 컬럼 = 
+- SELECT ~~~~~ FROM 테이블 WHERE 컬럼 = (select ~~ from 테이블 where 조건)
 
+### 함수
+- 문자열 함수
+- Math 함수
+- 날짜 함수
+
+
+### 내장 프로시저
+```
+CREATE PROCEDURE 프로시저명 ( IN | OUT | INOUT )
+  BEGIN
+    IF ~ THEN ~~
+    ELSEIF THEN~~
+    CASE ~ WHEN ~ THENN ~~
+    WHILE 조건식 DO ~~~
+    REPEAT ~~ UNTIL ~
+    Loop_Lable : LOOP ~~
+  END
+
+CALL ( in값, out변수, inout변수)
+```
+
+### 함수
+```
+CREATE FUNCTION 함수명 (변수 데이터타입)
+  RETURNS 반환타입
+  BEGIN
+    RETURN 값
+  END
+SELECT ,,, 함수명() FROM ~~~~~~~~~~
+```
 
 -----------------------------------------------------------------------------------------------
 
