--- a/5월 2주차/5월 8일.MD
+++ b/5월 2주차/5월 8일.MD
@@ -2,6 +2,10 @@
 
 데이터베이스 학습
 ## 개체(Entity)와 속성(Relationship)
+- 개체 : 현실세계에 대한 사람이 생각하는 개념이나 정보의 단위
+- 속성
+1. 속성관계 : 학생(학번-이름-학과)
+2. 개체관계 : 학생--수교수
 
 ### 관계와 사상수
 - 식별관계 : 부모테이블의 기본키가 자식 테이블의 ***기본키로 전이되는 관계***
