--- a/5월 2주차/5월 8일.MD
+++ b/5월 2주차/5월 8일.MD
@@ -77,6 +77,29 @@ CREATE FUNCTION 함수명 (변수 데이터타입)
 SELECT ,,, 함수명() FROM ~~~~~~~~~~
 ```
 
+### 트리거
+```
+CREATE TRIGGER 시점_이름_이벤트 시점 이벤트
+  ON 테이블
+  FOR EACH ROW
+  BEGIN
+    new, old
+  END
+```
+
+### 트랜잭션
+```
+CREATE PROCEDURE 송금(in|out|inout 변수명 데이터타입)
+  BEGIN
+    declare exit handler for sqlexception rollback;
+    start transaction;
+    [savepoint p]
+    
+    [rollback to p]
+    commit;
+  END
+```
+
 -----------------------------------------------------------------------------------------------
 
 # 오늘의 학습목표
