--- a/5월 2주차/5월 8일.MD
+++ b/5월 2주차/5월 8일.MD
@@ -88,10 +88,12 @@ CREATE TRIGGER 시점_이름_이벤트 시점 이벤트
 ```
 
 ### 트랜잭션
+- Rollback을 예외처리와 연결
+- 또는, IF문 등과 연계 구현 가능
 ```
 CREATE PROCEDURE 송금(in|out|inout 변수명 데이터타입)
   BEGIN
-    declare exit handler for sqlexception rollback;
+    declare exit handler for sqlexception rollback;   // 예외처리 발생하면 돌아가
     start transaction;
     [savepoint p]
     
