--- a/5월 2주차/5월 8일.MD
+++ b/5월 2주차/5월 8일.MD
@@ -105,8 +105,6 @@ CREATE PROCEDURE 송금(in|out|inout 변수명 데이터타입)
 -----------------------------------------------------------------------------------------------
 
 # 오늘의 학습목표
-- 트리거/트렌잭션을 이해하고 구현할 수 있다.
-
-# 공지사항
-- 데이터베이스 구현 / SQL활용 / SQL응용 평가예정
-- 평가일시 : 5/8(월)
+- 데이터베이스 구현 (2hr)
+- SQL 활용 (2hr)
+- SQL 응용 (2hr)
