--- a/5월 2주차/5월 9일.MD
+++ b/5월 2주차/5월 9일.MD
@@ -6,3 +6,9 @@
 -----------------------------------------------------
 
 ## 평가 예정
+- 응용프로그램 활용 - 자바 직렬화 및 API활용
+
+### 요구사항 분석
+- 포트폴리오에 요구사항 분석기재
+- ER 다이어그램 작성
+- USE CASE작성
