--- a/5월 2주차/5월 9일.MD
+++ b/5월 2주차/5월 9일.MD
@@ -12,3 +12,11 @@
 - 포트폴리오에 요구사항 분석기재
 - ER 다이어그램 작성
 - USE CASE작성
+
+## 오늘의 학습목표
+- JSP(Java Server Page) 개념이해
+- 직접 Servlet 작성하며 Servlet 이해한다
+- JSP에서 자바코드 사용해 보기
+
+## 포트폴리오에 반영할 사항
+- 데이터베이스 ERD를 기준으로 입력페이지와 출력페이지를 추가 작성해놓는다.
