--- a/5월 2주차/5월 9일.MD
+++ b/5월 2주차/5월 9일.MD
@@ -20,3 +20,17 @@
 
 ## 포트폴리오에 반영할 사항
 - 데이터베이스 ERD를 기준으로 입력페이지와 출력페이지를 추가 작성해놓는다.
+
+### 웹프로그래밍 개요
+```
+정적 웹 : 고정된 정보처리
+동적 웹 : 가공처리해야 할 정보처리
+
+서버 설치 - Apache
+웹 컨테이너 설치 - Tomcat
+
+정적문서 - 웹 페이지, 동영상, 이미지 저장, 데이터베이스 설치 : MYSQL, HTML/CSS/JS
+동적문서 - JSP > 컨테이너 > java > JSP컨테이너 > 서블릿클래스(class) > 초기화 > 서블릿컨테이너 > 객체(servlet)
+
+```
+
