--- a/5월 2주차/5월 9일.MD
+++ b/5월 2주차/5월 9일.MD
@@ -34,3 +34,62 @@
 
 ```
 
+
+
+## JSP
+- 자바 표준 라이브러리
+- 컴파일 된 후 메모리에서 처리되기 떄문에 많은 사용자의 접속도 원활하게 가능
+
+
+## SERVLET
+- 웹서버에서 동작하 서비스 페이지
+- 웹브라우저에서 클라이언트 요청에 따라 서버가 실행하는 자바 프로그램
+
+### WAS(Web Aplication server) ( = Java EE 서버)
+
+
+### jsp 완전기초
+```jsp
+<%@ page language="java" contentType="text/html; charset=UTF-8"
+    pageEncoding="UTF-8"%>
+<!DOCTYPE html>
+<html>
+<head>
+<meta charset="UTF-8">
+<title>Insert title here</title>
+</head>
+<body>
+	<h1>JSP에 오신걸 환영합니다</h1>
+	<%
+		for(int i=6;i>=1;i--){
+			
+			/* String str = "<h"+i+">Welcome JSP! </h"+i+">";
+			out.print(str); */
+			
+			String str = "<h"+i+">Welcome JSP!</h"+i+">";
+			out.print(str);
+		}
+	%>
+	
+	<p>스크립트 안에 작성해 놓은 코드결과의 출력위치가 어디인가요?</p>
+	
+</body>
+</html>
+```
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
