--- a/5월 2주차/5월 9일.MD
+++ b/5월 2주차/5월 9일.MD
@@ -47,6 +47,55 @@
 
 ### WAS(Web Aplication server) ( = Java EE 서버)
 
+### 이론
+```jsp
+<!-- 
+	JSP?
+		. 동적으로 웹 컨텐츠를 생성하기 위한 "자바기반 스크립트 언어"이다.
+		. 웹 페이지를 작성하기 위한 기술 J2EE플랫폼에 속하는 자바기술이다.
+		
+			* 스크립트란?
+				- 웹 표준 HTML에 삽입되어 프로그램 실행내역을 기술할 수 있는 언어를 말한다.
+				
+		. 웹 문서에 삽입되어 "스크립트방식으로 프로그래밍"을 작성할 수 있다.
+		. 자바에 기반하므로 자바언어의 특성을 그대로 활용하여 다양한 API를 자유롭게 활용할수있다.
+		. 자바언어 외에
+			- 표현언어(ExpressionLanguage, EL)
+			- 자바표준태그 라이브러리(JSTL) 등을 활용하여 더 효과적인 프로그램을 작성할 수 있다.
+			- 액션태그 등을 활용하여 더 효과적인 프로그램을 작성할 수 있다.
+		
+		. 오픈소스이고 spring과 같은 자바언에 기반을 둔 개발 프레임워크가 존재한다.
+		
+	JSP가 동적컨텐츠를 생성하기 위한 기법들
+		. 스크립틀릿( % ~~~ % )를 활용하여 자바코드를 사용할 수 있다.
+		. 액션태그   (jsp:~~~) 를 활용해서
+			- 자바빈(javaBean : 사용자가 정의한 자바클래스)속성을 읽고 쓸 수 있고
+			- 흐름을 제어할 수 있다.
+			
+		. 기본태그종류				기본태그포맷
+			지시어(direct)			(%@page ~~ %)
+								(%@include~ %)
+								(%@tablib~%)
+			
+			
+			선언자(declaration)	(%! ~~ %)
+			스크립틀렛(scriptlet)	(% ~~~ %)
+			표현자(expression)		(%= ~~ %)
+			
+		. EL(표현언어)
+		. JSTL(표준태그라이브러리)
+			
+	jsp가 제공하는 기술
+		. 템플릿 데이터 : 텍스트 또는 XML, HTML태그로 구성된 컨텐츠
+		. 동적데이터 : 상황에 따라 내용이 바뀔 수 있는 컨텐츠 데이터를
+					스클립트같은 프로그래밍적 요소로 추가할 수 있다.
+					- scriptlet(스크립트릿)에 자바코드를 넣어서 구현한다.
+						(%	%)	
+
+ -->
+```
+
+
 
 ### jsp 완전기초
 ```jsp
