--- a/5월 2주차/5월 9일.MD
+++ b/5월 2주차/5월 9일.MD
@@ -126,9 +126,162 @@
 </html>
 ```
 
+### jsp로 로또번호 출력
+```jsp
+<%@ page language="java" contentType="text/html; charset=UTF-8"
+    pageEncoding="UTF-8"%> <!-- Math클래스를 import -->
+<!DOCTYPE html>
+<html>
+<head>
+<meta charset="UTF-8">
+<title>Insert title here</title>
+<style>
+	h3{
+		color: red;
+	}
+</style>
+</head>
+<body>
 
+	<h1>로또번호를 출력합시다.</h1>
 
+	<!-- 로또번호 6개를 출력한다. -->
+<%-- 	<%
+		int[] ran = new int[6];
+	
+		
+	
+		for(int i=0;i<ran.length;i++){
+			
+			ran[i] = (int) (Math.random() * 45) + 1;
+			
+			out.print(ran[i]+", ");
+		}
+	%> --%>
+	
+	
+	<!-- 선언부 : 변수나 메서드를 선언 -->
+	<%!
+		static String lotto(){
+			int random = (int)((Math.floor(Math.random()*46))+1);
+			return Integer.toString(random);
+	}
+	
+	%>
+	
+	<!-- 스크립틀릿 : 자바코드 -->
+	<%
+		out.print("<h3>");
+		for(int i=0; i<6; i++){
+			out.print(lotto()+ " ");
+		}
+		out.print("</h3>");
+	%>
+	
+	<!-- 표현식 : 출력할 문자열이나 변수, 값(out.print()와 동일기능 -->
 
+</body>
+</html>
+```
+
+### jsp js 이용 더하기 해보기
+```jsp
+<%@ page language="java" contentType="text/html; charset=UTF-8"
+    pageEncoding="UTF-8"%>
+<!DOCTYPE html>
+<html>
+<head>
+<meta charset="UTF-8">
+<title>Insert title here</title>
+</head>
+<body>
+	<!-- 
+	
+	(메서드)두개의 값을 받는 add,sub,mul,div메서드를 구현해 놓는다. - 선언부
+	
+	1. 두 값을 넣어서 결과값을 출력한다 - 스크립틀릿
+		n1+n2 = 값
+		n1-n2 = 값
+		
+	
+	
+	2. 테이블의 td에 넣고도 결과값을 출력해 본다. - 표현식 
+		n1+n2 = 값
+		n1-n2 = 값
+		n1*n2 = 값
+		n1/n2 = 값
+
+	-->
+	
+	<%!
+		static int calcul1(int a, int b) {
+			return a+b;
+		}
+	
+		static int calcul2(int a, int b) {
+		return a-b;
+		}
+		
+		static int calcul3(int a, int b) {
+			return a*b;
+		}
+		
+		static int calcul4(int a, int b) {
+			return a/b;
+		}
+	
+	%>
+	
+	<%
+		out.print("<h3>더하기 값 : "+calcul1(3,5)+"</h3>");
+		out.print("<h3>빼기 값 : "+calcul2(3,5)+"</h3>");
+		out.print("<h3>곱하기 값 : "+calcul3(3,5)+"</h3>");
+		out.print("<h3>나누기 값 : "+calcul4(15,3)+"</h3>");
+	%>
+	
+	<table border=1>
+		<tr>
+		<td colspan=2 align=center>Plus Example
+		</tr>
+		
+		<tr>
+		<td><input type = text placeholder="input number1" id = num1>
+		</tr>
+		
+		<tr>
+		<td><input type = text placeholder="input number2" id = num2>
+		</tr>
+		
+		<tr>
+		<td colspan=2 align=center><input type="button" value = plus id = plus>
+		</tr>
+		
+		<tr>
+		<td colspan=2 align=center><input type=text placeholder="result here" id = result>
+		</tr>
+	</table>
+	
+	<script type="text/javascript">	  
+		  function calculate() {
+			  var num1 = parseInt(document.getElementById("num1").value);
+			  var num2 = parseInt(document.getElementById("num2").value);
+			  
+			  document.getElementById("result").value = num1 + num2;
+		  }
+		  
+		  document.getElementById("plus").onclick = calculate;
+		  
+		  document.addEventListener("keydown", function(event) {
+			  if(event.key === "Enter") {
+				  calculate();
+			  }
+		  });
+	
+	
+	</script>
+</body>
+</html>
+```
 
 
 
