--- a/5월 2주차/5월 9일.MD
+++ b/5월 2주차/5월 9일.MD
@@ -94,6 +94,40 @@
 
  -->
 ```
+```java
+/*
+	servlet 클래스 계층도
+	
+		ServletConfig 인터페이스
+		Servlet인터페이스	---------	GenericServlet클래스
+											|
+										HttpServlet클래스
+											|
+											|
+										상속받아 작성
+										
+	서블릿의 생명주기가 있다. (자동호출)
+	
+				init()
+					-	서블릿이 생성될 때 딱 한번만 호출된다.
+					-	서블릿 컨테이너가 서블릿 객체를 생성한 후 호출합니다.
+					-	서블릿이 작업하는데 필요한 자원을 준비시키는 코드를 여기서 작성합니다.
+						코드를 여기서 작성합니다. (초기화)
+					
+				service()
+					-	해당 서블릿에 대한 요청이 들어오면 그때마다 호출됩니다.
+					-	클라이언트가 요청한 작업을 처리하는 코드를 여기에 작성합니다.
+					
+				doGet/doPost()
+					-	서블릿이 Get방식으로 호출되면 service()를 통해 호출됩니다. - doGet()
+					-	서블릿이 Post방식으로 호출되면 service()를 통해 호출됩니다. - doPost()
+					
+				destroy()
+					-	서블릿이 기능을 수행하고 메모리에서 소멸될때 호출됩니다.
+					-	서블릿의 마무리 작업을 주로 작성합니다.
+
+*/
+```
 
 
 
