--- a/5월 2주차/5월 9일.MD
+++ b/5월 2주차/5월 9일.MD
@@ -318,7 +318,98 @@
 ```
 
 
+### Servlet1, doGet
+```java
+package myservlet;
 
+import java.io.IOException;
+import java.io.PrintWriter;
+
+import javax.servlet.ServletException;
+import javax.servlet.annotation.WebServlet;
+import javax.servlet.http.HttpServlet;
+import javax.servlet.http.HttpServletRequest;
+import javax.servlet.http.HttpServletResponse;
+
+//@WebServlet("/second2")
+public class SecondServlet_doGet extends HttpServlet {
+	
+	// doGet()에 <h1>Hello~ Servlet1</h1>
+	
+	// 출력되게 작성하고...
+	// web.xml에서 매핑, @WebServlet() 매핑 >> 실행
+	@Override
+	public void init() throws ServletException {
+		System.out.println("init메소드 호출");
+
+	}
+	
+	@Override
+	protected void doGet(HttpServletRequest request, HttpServletResponse response) throws ServletException, IOException {
+		
+		PrintWriter writer = response.getWriter();
+		writer.println("<html>");
+		writer.println("<head><title>Second</title></head>");
+		writer.println("<body>");
+		writer.println("<h1>Hello~ Servlet1</h1>");
+		writer.println("</body>");
+		writer.println("</html>");
+	}
+}
+```
+
+### Servlet 2, doPost
+```java
+package myservlet;
+
+import java.io.IOException;
+import java.io.PrintWriter;
+
+import javax.servlet.ServletException;
+import javax.servlet.annotation.WebServlet;
+import javax.servlet.http.HttpServlet;
+import javax.servlet.http.HttpServletRequest;
+import javax.servlet.http.HttpServletResponse;
+
+@WebServlet("/Servlet3")
+public class Servlet3_doPost extends HttpServlet {
+	
+	public Servlet3_doPost() {
+	}
+	
+	@Override
+	protected void service(HttpServletRequest req, HttpServletResponse resp) throws ServletException, IOException {
+		doPost(req, resp);
+		
+	}
+	
+	@Override
+	protected void doPost(HttpServletRequest req, HttpServletResponse resp) throws ServletException, IOException {
+		
+		// 1. 응답할 컨텐트타입을 설정한다.
+		resp.setContentType("text/html;charset=utf-8");
+		
+		// 2. 출력시킬 스트림을 생성한다.
+		PrintWriter out = resp.getWriter();
+		
+		// 3. 요청받은 파라미터값을 한글이 깨지지않도록 인코딩을 맞춘다
+		req.setCharacterEncoding("utf-8");
+		
+		// 4. 요청시에 보내온 파라미터값을 받아온다.
+		String name = req.getParameter("name");
+		
+		// 5. 응답할 출력문서 작성
+		out.println("<html><body>");
+		out.println("<h1>Hello, "+name+"님</h1>");
+		out.println("</body></html>");
+		
+		// 6. 닫는다.
+		out.close();
+		
+	}
+}
+
+```
 
 
 
