--- a/5월 2주차/5월 10일.MD
+++ b/5월 2주차/5월 10일.MD
@@ -1,6 +1,26 @@
 # Review
 
-데이터베이스 평가 : 평가자료 및 채점 진행 -- 재평가
+- HTML에 자바코드 사용 : 선언부 <%! %>, 스크립틀릿 <% %>, 표현식 <% =%>
+- Page지시어 : 페이지에 대한 정보를 설정한다. : content-type, harset, import, error, session 등
+- 서블릿
+```
+서버에서 실행되는 HttpServlet을 상속받아 서블릿규칙에 맞게 작성된 자바 객체를 말한다.
+
+life cycle이 있다. : init(), service(), doGet(), doPost(), destroy()중 필요한 메서드가
+자동 호출되어 실행되면서 요청한 문서에 처리를 담당하게 된다.
+
+서블릿은 java로 직접 작성할수도 있고 JSP로 작성하여 자동변환되도록 할 수 있다.
+  . Java >> .class >> 초기화 >> 객체 >> 메모리에 상주하면서 접속자들에게 해당 요청 처리를 서비스한다.
+  
+서블릿은 객체로 존재하다가 내용이 변경될 때만 다시 생성된다.
+```
+- 서블릿 url패턴 매핑 : web.xml 또는 @WebServlet("/서블릿명")
+- 서블릿에 있던 주요코드
+```
+getParameter("파라미")     - url주소줄로 넘어노는 name(form의 name)을 받는다.
+response.setContentType("text/html.charset=utf-8")  -   응답처리에 컨텐트타입은 html이고 charset = utf-8 한글처리
+request.setCharacterEncoding("utf-8")
+```
 
 
 -----------------------------------------------------
